// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns matrix selection from string 1`] = `
[
  {
    "x": 0,
    "y": 0,
  },
  {
    "x": 0,
    "y": 0,
  },
  {
    "x": 0,
    "y": 1,
  },
  {
    "x": 1,
    "y": 1,
  },
]
`;

exports[`returns matrix selection from string 2`] = `
[
  {
    "x": 0,
    "y": 0,
  },
  {
    "x": 0,
    "y": 0,
  },
  {
    "x": 0,
    "y": 1,
  },
  {
    "x": 1,
    "y": 1,
  },
  {
    "x": 0,
    "y": 2,
  },
  {
    "x": 2,
    "y": 2,
  },
]
`;

exports[`returns matrix selection from string 3`] = `
[
  {
    "x": 1,
    "y": 1,
  },
  {
    "x": 10,
    "y": 10,
  },
  {
    "x": 100,
    "y": 100,
  },
  {
    "x": 1000,
    "y": 1000,
  },
  {
    "x": 10000,
    "y": 10000,
  },
]
`;

exports[`returns matrix selection string 1`] = `"0-0-0-0-0-1-1-1"`;

exports[`returns matrix selection string 2`] = `"0-0-0-0-0-1-1-1-0-2-2-2"`;

exports[`returns matrix selection string 3`] = `"1-1-10-10-100-100-1000-1000-10000-10000"`;

exports[`throws on invalid data 1`] = `[MatrixSelectionSerializerDeserializeError: Invalid matrix selection length]`;

exports[`throws on invalid data 2`] = `[MatrixSelectionSerializerDeserializeError: Invalid matrix selection position]`;

exports[`throws on invalid data 3`] = `[MatrixSelectionSerializerDeserializeError: Invalid matrix selection position]`;
